--- a/views/show.ejs
+++ b/views/show.ejs
@@ -5,7 +5,7 @@
         <div class="item">
             <img class="ui centered rounded image" src="<%=blog.image%>">
             <div class="content">
-                <span><%= blog.created.toDateString() %></span>
+                <span id="date"><strong><%= blog.created.toDateString() %></strong></span>
             </div>
             <div id="desc" class="description">
                 <p><%= blog.body%></p>
